# dlt-sources

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  data.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  source_request.yml
.github/workflows/: ci.yml  release.yml
examples/: attio_pipeline.py
examples/.dlt/: secrets.toml.example
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_096fde0d895c59d7___init___py.html  z_096fde0d895c59d7_helpers_py.html  z_096fde0d895c59d7_settings_py.html  z_0f729fd49c9df70e___init___py.html  z_0f729fd49c9df70e_helpers_py.html  z_0f729fd49c9df70e_settings_py.html  z_44aafc386bfc0c10___init___py.html  z_44aafc386bfc0c10_helpers_py.html  z_44aafc386bfc0c10_settings_py.html  z_4d5dd393d127ca1c___init___py.html  z_659e5b85e5377fd8___init___py.html  z_659e5b85e5377fd8_helpers_py.html  z_659e5b85e5377fd8_settings_py.html  z_6c38d1592f5cf798___init___py.html  z_6c38d1592f5cf798_helpers_py.html  z_6c38d1592f5cf798_settings_py.html  z_7d2b565b71f4c24b___init___py.html  z_7d2b565b71f4c24b_helpers_py.html  z_7d2b565b71f4c24b_settings_py.html  z_81f31fe692eb1852___init___py.html  z_81f31fe692eb1852_helpers_py.html  z_81f31fe692eb1852_settings_py.html  z_9ed154a655048db4___init___py.html  z_9ed154a655048db4_helpers_py.html  z_9ed154a655048db4_settings_py.html  z_9fd5a5ee6b4a5b1a___init___py.html  z_9fd5a5ee6b4a5b1a_helpers_py.html  z_9fd5a5ee6b4a5b1a_settings_py.html  z_c2024206b90fc286___init___py.html  z_c2024206b90fc286_helpers_py.html  z_c2024206b90fc286_settings_py.html  z_d273660060151a60___init___py.html  z_d273660060151a60_helpers_py.html  z_d273660060151a60_settings_py.html  z_d746370b70f60092___init___py.html  z_d746370b70f60092_helpers_py.html  (+1 more)
paradox_dlt_sources/: __init__.py
paradox_dlt_sources/agree_com/: README.md  settings.py
paradox_dlt_sources/apollo_io/: README.md
paradox_dlt_sources/attio/: __init__.py  settings.py
paradox_dlt_sources/github/: helpers.py  requirements.txt
paradox_dlt_sources/loxo/: __init__.py  helpers.py  settings.py
paradox_dlt_sources/m365_graph/: __init__.py  helpers.py  settings.py
paradox_dlt_sources/monday_crm/: README.md  __init__.py  helpers.py  settings.py
paradox_dlt_sources/notion/: __init__.py  settings.py
paradox_dlt_sources/pipedrive/: README.md  __init__.py  settings.py
paradox_dlt_sources/quickbooks/: __init__.py  helpers.py
paradox_dlt_sources/stripe/: README.md  __init__.py  helpers.py
scripts/: sync_dlt_init_layout.py
sources/: agree_com  agree_com_pipeline.py  apollo_io_pipeline.py  attio  attio_pipeline.py  github  github_pipeline.py  hubspot  hubspot_pipeline.py  loxo_pipeline.py  m365_graph_pipeline.py  monday_crm_pipeline.py  notion  notion_pipeline.py  pipedrive  pipedrive_pipeline.py  quickbooks  quickbooks_pipeline.py  stripe  stripe_pipeline.py
sources/agree_com/: __init__.py  helpers.py
sources/apollo_io/: __init__.py  helpers.py  settings.py
sources/attio/: README.md  helpers.py
sources/github/: README.md  __init__.py  helpers.py  settings.py
sources/hubspot/: README.md  __init__.py  helpers.py  requirements.txt  settings.py
sources/loxo/: README.md
sources/m365_graph/: README.md
sources/notion/: README.md  helpers.py
sources/pipedrive/: __init__.py  helpers.py
sources/quickbooks/: README.md  settings.py
sources/stripe/: README.md  __init__.py  settings.py
tests/: conftest.py
tests/_helpers/: fixture_loader.py
tests/agree_com/: test_agree_com_helpers.py  test_agree_com_source.py
tests/agree_com/fixtures/: agreements_page_1.json  agreements_page_2.json  contacts_page_1.json  invoices_page_1.json
tests/apollo_io/: test_apollo_io_helpers.py  test_apollo_io_source.py
tests/apollo_io/fixtures/: email_accounts_page_1.json  email_accounts_page_2.json  labels_page_1.json
tests/attio/: test_attio_helpers.py  test_attio_source.py
tests/attio/fixtures/: companies_page_1.json  companies_page_2.json  lists.json  notes.json
tests/github/: test_github_auth.py  test_github_helpers.py  test_github_source.py
tests/github/fixtures/: commits_anvil.json  org_acme.json  org_members.json  pr_commits_anvil_1.json  pr_detail_anvil_1.json  pulls_anvil.json  repos.json
tests/hubspot/: test_hubspot_helpers.py  test_hubspot_source.py
tests/hubspot/fixtures/: companies_page_1.json  companies_page_2.json  contacts_page_1.json  deal_pipelines.json  deals_page_1.json  engagements_page_1.json  engagements_page_2.json
tests/loxo/: test_loxo_helpers.py  test_loxo_source.py
tests/loxo/fixtures/: companies_page_1.json  deals_page_1.json  jobs_page_1.json  jobs_page_2.json  (+4 more)
tests/m365_graph/: test_m365_graph_helpers.py  test_m365_graph_source.py
tests/monday_crm/: test_monday_crm_helpers.py  test_monday_crm_source.py
tests/notion/: test_notion_helpers.py  test_notion_source.py
tests/pipedrive/: test_pipedrive_helpers.py  test_pipedrive_source.py
tests/quickbooks/: test_helpers.py  test_source.py
tests/stripe/: test_stripe_helpers.py  test_stripe_source.py
(+43 files in other folders)
